--- a/02-Challenge_Portfolio/index.html
+++ b/02-Challenge_Portfolio/index.html
@@ -87,7 +87,7 @@
               <div class="contact-info">
                 <div>
                     <p>
-                        I love coding! 
+                       <h2> I love coding! </h2>
                         <br/>
                         And I am happy to code too!
                     </p>
