--- a/02-Challenge_Portfolio/index.html
+++ b/02-Challenge_Portfolio/index.html
@@ -9,16 +9,23 @@
 <body>
     <header>
         <div class="container">
-            <div class="header-content">
+            <div class="hegader-content">
                 <h1>My Portfolio</h1>
-                <img src="Home logo.JPG" alt="Developer's Avatar" class="avatar">
-                <nav>
-                    <ul>
-                        <li><a href="#about">About Me</a></li>
-                        <li><a href="#works">My Works</a></li>
-                        <li><a href="#contact">Contact Me</a></li>
-                    </ul>
-                </nav>
+                <div class="panna">                        
+                   
+                    <div class="jota">
+                         <img src="myphoto.jpg" alt="Developer's Avatar" class="avatar">
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a href="#about"><h2>About Me</h2></a></li>
+                            <li><a href="#works"><h2>My Works</h2></a></li>
+                            <li><a href="#contact"><h2>Contact Me</h2></a></li>
+                        </ul>
+                    </nav>
+
+                 </div>
+                
             </div>
         </div>
     </header>
@@ -45,36 +52,36 @@
                     </a>
                 </div>
 
-                <div class="world-gallery">
-                <a href="project2.html"><img src="writh.webp" alt="Project 2">
-                <div>Project 2</div>
-                   </a>
+                <div class="gallery-div"">
+                    <a href="project2.html"><img src="writh.webp" alt="Project 2">
+                        <div>Project 2</div>
+                    </a>
                 </div>
 
-                <div class="world-gallery">
-                <a href="project3.html"><img src="thankinh.jpg" alt="Project 3">
-                <div>Project 3</div>
-                   </a>
+                <div class="gallery-div"">
+                    <a href="project3.html"><img src="thankinh.jpg" alt="Project 3">
+                        <div>Project 3</div>
+                    </a>
                 </div>
 
-                <div class="work-gallery">
-                <a href="project3.html"><img src="mouse.jpg" alt="Project 4">
-                    <div>projec 4</div>
-                  </a>
+                <div class="gallery-div"">
+                    <a href="project3.html"><img src="mouse.jpg" alt="Project 4">
+                        <div>projec 4</div>
+                    </a>
                 </div>
 
-                <div class="work-gallery">
-                <a href="project3.html"><img src="Group.jpg" alt="Project 5">
-                    <div>project 5</div>
-                  </a>
+                <div class="gallery-div"">
+                    <a href="project3.html"><img src="Group.jpg" alt="Project 5">
+                        <div>project 5</div>
+                    </a>
                 </div>
 
-                <div class="work-gallery">
-                <a href="project3.html"><img src="istockphoto-1227064104-170667a.webp" alt="Project 6">
-                    <div>project 6</div>
-                  </a>
+                <div class="gallery-div"">
+                    <a href="project3.html"><img src="istockphoto-1227064104-170667a.webp" alt="Project 6">
+                        <div>project 6</div>
+                    </a>
                 </div>
-            </div>
+            </div>  
         </div>
     </section>
 
@@ -126,7 +133,9 @@
             <div class="container">
                 <div class="header-content">
                     <h1>My Portfolio</h1>
-                    <img src="Home logo.JPG" alt="Developer's Avatar" class="avatar">
+                    <div class="jopanna">
+                    <img src="my.jpg" alt="Developer's Avatar" class="avatar">
+                    </div>
                     <nav>
                         <ul>
                             <li><a href="#about">About</a></li>
